# gtd-api

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: b67e99df3718_create_users_table.py
src/gtd_api/: config.py  database.py  main.py
src/gtd_api/models/: user.py
src/gtd_api/routes/: auth.py
